p2/app3-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 1
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: hashicorp/http-echo
        args:
        - "-text=<html><body><h1>Hello, this is app3!</h1></body></html>"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app: app3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
